# aprils-site

./: .env  .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  hello.py  manage.py  pyproject.toml  requirements.txt  robots.txt
base/: blocks.py  models.py
base/migrations/: 0001_initial.py  0002_footertext.py  0003_formpage_formfield.py  0004_formpage_image.py  0005_formpage_title_text.py  0006_rename_title_text_formpage_large_text.py  0007_footerconfiguration_headerconfiguration.py  0008_remove_footerconfiguration_footer_logo_and_more.py  0009_alter_footerconfiguration_content_and_more.py  0010_sitelogo.py  0011_remove_headerconfiguration_contact_button_link_and_more.py  0012_formpage_contact_info.py
base/templatetags/: navigation_tags.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_author.py  0005_blogpage_authors.py  0006_blogpagetag_blogpage_tags.py  0007_blogtagindexpage.py
cv/: blocks.py  models.py
cv/migrations/: 0001_initial.py  0002_cvpage_pdf_document.py  0003_remove_cvpage_cv_file_remove_cvpage_education_and_more.py
home/: blocks.py  models.py
home/migrations/: 0003_homepage_body.py  0004_homepage_hero_cta_homepage_hero_cta_link_and_more.py  0005_homepage_site_logo.py  0006_remove_homepage_body_homepage_content.py  0007_remove_homepage_hero_cta_and_more.py  0008_alter_homepage_content.py  0009_alter_homepage_content.py
portfolio/: blocks.py  models.py
poxed/: urls.py  wsgi.py
static/: staticfiles.json
staticfiles/: staticfiles.json
timeline/: blocks.py  models.py
(+60 files in other folders)
