[project]
name = "wagtail-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-browser-reload>=1.17.0",
    "django-tailwind>=3.8.0",
    "environ>=1.0",
    "pip>=24.3.1",
    "wagtail>=6.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
